dist/1.0/bin/sample/retrieveUnpackaged/objects/ConfiguredGenericProduct__c.object
<CustomObject>
    <fields>
        <fullName>Actiontype__c</fullName>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ComponentGenericProduct__c</fullName>
        <label>Component Generic Product</label>
        <referenceTo>Component_Generic_Product__c</referenceTo>
        <relationshipLabel>Configured Generic Product</relationshipLabel>
        <relationshipName>Configured_Generic_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfiguredBundle__c</fullName>
        <label>Configured Bundle</label>
        <referenceTo>ConfiguredBundle__c</referenceTo>
        <relationshipLabel>Configured Generic Product</relationshipLabel>
        <relationshipName>Configured_Generic_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfiguredComponent__c</fullName>
        <label>Configured Component</label>
        <referenceTo>ConfiguredComponent__c</referenceTo>
        <relationshipLabel>Configured Generic Products</relationshipLabel>
        <relationshipName>Configured_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GenericProductRelation__c</fullName>
        <label>Generic Product Relation</label>
        <referenceTo>Generic_Product_Relation__c</referenceTo>
        <relationshipLabel>Configured Generic Product</relationshipLabel>
        <relationshipName>Configured_Generic_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GenericProduct__c</fullName>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Configured Generic Products (Generic Product)</relationshipLabel>
        <relationshipName>Configured_Generic_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentGenericProduct__c</fullName>
        <label>Parent Generic Product</label>
        <referenceTo>ConfiguredGenericProduct__c</referenceTo>
        <relationshipLabel>Configured Generic Products</relationshipLabel>
        <relationshipName>Configured_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configured Generic Product</label>
    <nameField>
        <label>Configured Generic Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Generic Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>